e4g-182 Add links to the Cell Type and EMAPA Browsers from the Recombinase Activity Detail page, not use getFirst()